# mini-claude-code

./: Cargo.toml  README.md
docs/: design.md  implementation-plan.md  session-persistence-design.md  session-persistence-plan.md  vision.md
src/: auth.rs  cost.rs  lib.rs  main.rs  repl.rs  session.rs
src/api/: client.rs  stream.rs  types.rs
src/tools/: bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs  write.rs
src/ui/: highlight.rs  input.rs  mod.rs  picker.rs  render.rs  spinner.rs
