[package]
name = "mini-claude-code"
version = "0.1.0"
edition = "2021"
description = "A minimal Claude Code CLI in Rust"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
globwalk = "0.9"
anyhow = "1"
hex = "0.4"
base64 = "0.22"
urlencoding = "2"
async-trait = "0.1"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
